Fix portfolio action menu behavior on mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -765,6 +765,7 @@
         }
 
         .action-buttons {
+            display: none;
             position: absolute;
             top: 100%;
             right: 0;
